--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "formik": "^2.4.5",
     "nanoid": "^5.0.5",
     "react": "^18.2.0",
@@ -17,6 +19,7 @@
     "yup": "^1.3.3"
   },
   "devDependencies": {
+    "@mui/icons-material": "^5.15.9",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
